k8s/ApiDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ApiDeployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: api:v1
          ports:
            - containerPort: 1337
