k8s/RedisDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: RedisDeployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:v1
          ports:
            - containerPort: 6379
