k8s/ApiService.yaml
apiVersion: v1
kind: Service
metadata:
  name: ApiService
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1337
