k8s/ApiIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ApiIngress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ApiService
                port:
                  number: 80
